# graphics

bezier curves/: README.md
bezier curves/input/: teacup.bez  temp.bez
bezier curves/src/: Vectors.h  example_03.cpp
inverse kinematics/: Arm.h  Armadillo_ C++ linear algebra library.htm  Matrix.h  README.md  Vector.h  main  main.cpp
inverse kinematics/main.dSYM/Contents/Resources/DWARF/: main
ray tracer/: CMakeLists.txt  README.md
ray tracer/CImg/: README.txt
ray tracer/CImg/examples/: Makefile
ray tracer/input/: ellipsoid.txt  input1.txt  input2.txt  inputTransform.txt  lineuptest.txt  obj_simpleTriTest.txt  obj_test.txt  shadow.txt  sphere.txt  triangle.txt
ray tracer/output/: input1_output.ppm
ray tracer/src/: Boundary.h  Camera.h  Colors.h  Light.h  Makefile  Material.h  Matrices.cpp  Matrices.h  Shader.cpp  Shape.h  Vectors.h  main.cpp  objReader.cpp
shader/: README.md
shader/src/: example_01.cpp
